--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment files (keep API keys secure)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# Allow .env.example for documentation
+!.env.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
